--- a/src/2-form.html
+++ b/src/2-form.html
@@ -8,21 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-curr="active"
-    />
+
 
     <main>
       <div class="container">
+        <a class="back-link" href="./index.html">Go back</a>
         <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 3
+          form page
         </h1>
-        <load src="./partials/back-link.html" />
       </div>
     </main>
 
-    <load src="./partials/footer.html" />
+    <script src="./js/2-form.js"></script>
   </body>
 </html>
