--- a/src/2-form.html
+++ b/src/2-form.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 3</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/form.css" />
   </head>
   <body>
 
@@ -16,9 +17,26 @@
         <h1 class="main-title">
           form page
         </h1>
+
+        <div class="container-form">
+
+        <form class="feedback-form" autocomplete="off">
+  <label>
+    Email
+    <input type="email" name="email" autofocus />
+  </label>
+
+  <label>
+    Message
+    <textarea name="message" rows="8"></textarea>
+  </label>
+
+  <button type="submit">Submit</button>
+</form>
+</div>
       </div>
     </main>
 
-    <script src="./js/2-form.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
